Criação da Dimensão funcionários, dimensão funcionário áreas, e soma das dimensões novas na fato venda.

--- a/models/Staging/erp_nothwind/sources.yml
+++ b/models/Staging/erp_nothwind/sources.yml
@@ -18,3 +18,7 @@ sources:
                 - not_null
       - name: order_details
       - name: shippers
+      - name: employees
+      - name: employee_territories
+      - name: territories
+      - name: region
